changed api endpoint from replit to render. stored in env

--- a/src/styles/slides.scss
+++ b/src/styles/slides.scss
@@ -15,7 +15,7 @@
   }
 
   .coin-image {
-    max-width: 100px; /* Adjust as needed */
-    max-height: 300px; /* Adjust as needed */
-    border-radius: 20%; /* Optional: Make the image circular */
+    max-width: 100px;
+    max-height: 300px;
+    border-radius: 20%;
   }
